--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.padding {
+  padding: 10rem !important
+}
+
+.switch {
+  margin: 50px auto;
+  position: relative
+}
+
+.switch label {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: block
+}
+
+
+.switch.main {
+  width: 100px;
+  height: 100px
+}
+
+.switch.main label {
+}
+
+.switch.main label:after {
+}
+
+.switch.main label:before {
+  content: "";
+  position: absolute;
+  width: 30%;
+  height: 30%;
+  border-radius: inherit;
+  left: 40%;
+  top: 40%;
+  background: radial-gradient(40% 35%, #D50000, #D50000 60%);
+}
+
+
+.switch.main input:checked~label:before {
+}
